2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/Caret.cs, Mono.TextEditor/LineSegment.cs:
	  Refactored text editor. Corrected Document -> TextEditorData ->
	  TextEditor layers.

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed 'Bug 402543 - Crash
	  while pasting text from closed document.'.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Disable version auto-increment.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Don't allow replacing text in
	  read-only mode.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Restore accidentally removed
	  code.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
	  gtk-gui/objects.xml: Implemented support for read-only editors.
	* Mono.TextEditor/TextEditorOptions.cs: Make the Font property safer
	  for incorrect font names. Implemented CopyFrom method.

2008-06-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/CodeSegmentPreviewWindow.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/Caret.cs,
	  Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor/GutterMargin.cs, Mono.TextEditor/LineSegment.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs: Added support for
	  editor-specific options. TextEditor now has an Options property and
	  all classes use that object to get options, instead of the static
	  instance.
