@@ -1,5 +1,11 @@
 2008-06-23  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/Segment.cs:
+	  Optimized selection - fixing [Bug 402777] New: Mouse selection is
+	  very slow.
+
+2008-06-23  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/DefaultEditActions.cs,
 	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
 	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
